# mkl_fft

./: .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .travis.yml  AGENTS.md  CHANGELOG.md  CHANGES.rst  LICENSE.txt  README.md  meson.build  meson.options  pyproject.toml  setup.py
.github/: AGENTS.md  CODEOWNER  CODEOWNERS  copilot-instructions.md
.github/workflows/: build-with-clang.yml  build-with-standard-clang.yml  build_pip.yaml  build_pip.yml  conda-package-cf.yml  conda-package.yml  openssf-scorecard.yml  pre-commit-autoupdate.yml  pre-commit.yml
_vendored/: AGENTS.md  README.md  conv_template.py
benchmarks/: README.md  asv.conf.json  requirements.txt
benchmarks/benchmarks/: __init__.py  _patch_setup.py  _utils.py  bench_fft1d.py  bench_fftnd.py  bench_interfaces.py  bench_memory.py  bench_numpy_fft.py  bench_scipy_fft.py
conda-recipe/: AGENTS.md  bld.bat  build.sh  conda_build_config.yaml  meta.yaml
conda-recipe-cf/: AGENTS.md  bld.bat  build.sh  meta.yaml
mkl_fft/: AGENTS.md  __init__.py  __main__.py  _fft_utils.py  _float16_utils.py  _float_utils.py  _init_helper.py  _mkl_fft.py  _numpy_fft.py  _patch_numpy.py  _patch_startup.py  _pydfti.pyx  _scipy_fft.py  _scipy_fft_backend.py  _scipy_fftpack.py  _version.py  patch.py  setup.py  with_patch.py
mkl_fft/interfaces/: AGENTS.md  README.md  __init__.py  _float_utils.py  _numpy_fft.py  _numpy_helper.py  _scipy_fft.py  _scipy_fftpack.py  _scipy_helper.py  dask_fft.py  numpy_fft.py  scipy_fft.py
mkl_fft/src/: AGENTS.md  mklfft.c.src  mklfft.h  multi_iter.c  multi_iter.h
mkl_fft/tests/: AGENTS.md  helper.py  test_cli.py  test_fft1d.py  test_fftnd.py  test_from_numpy.py  test_from_scipy.py  test_interfaces.py  test_patch.py  test_pocketfft.py
mkl_fft/tests/from_scipy/: test_basic.py
